src/test/ui/consts/const-eval/ub-incorrect-vtable.64bit.stderr
error: any use of this value will cause an error
  --> $DIR/ub-incorrect-vtable.rs:19:14
   |
LL | / const INVALID_VTABLE_ALIGNMENT: &dyn Trait =
LL | |     unsafe { std::mem::transmute((&92u8, &[0usize, 1usize, 1000usize])) };
   | |______________^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^__-
   |                |
   |                invalid vtable: alignment `1000` is not a power of 2
   |
   = note: `#[deny(const_err)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: any use of this value will cause an error
  --> $DIR/ub-incorrect-vtable.rs:25:14
   |
LL | / const INVALID_VTABLE_SIZE: &dyn Trait =
LL | |     unsafe { std::mem::transmute((&92u8, &[1usize, usize::MAX, 1usize])) };
   | |______________^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^__-
   |                |
   |                invalid vtable: size is bigger than largest supported object
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error[E0080]: it is undefined behavior to use this value
  --> $DIR/ub-incorrect-vtable.rs:36:1
   |
LL | / const INVALID_VTABLE_ALIGNMENT_UB: W<&dyn Trait> =
LL | |     unsafe { std::mem::transmute((&92u8, &(drop_me as fn(*mut usize), 1usize, 1000usize))) };
   | |_____________________________________________________________________________________________^ type validation failed at .0: encountered invalid vtable: alignment `1000` is not a power of 2
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 16, align: 8) {
               ╾───────allocN───────╼ ╾───────allocN───────╼ │ ╾──────╼╾──────╼
           }

error[E0080]: it is undefined behavior to use this value
  --> $DIR/ub-incorrect-vtable.rs:41:1
   |
LL | / const INVALID_VTABLE_SIZE_UB: W<&dyn Trait> =
LL | |     unsafe { std::mem::transmute((&92u8, &(drop_me as fn(*mut usize), usize::MAX, 1usize))) };
   | |______________________________________________________________________________________________^ type validation failed at .0: encountered invalid vtable: size is bigger than largest supported object
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 16, align: 8) {
               ╾───────allocN───────╼ ╾───────allocN───────╼ │ ╾──────╼╾──────╼
           }

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0080`.
